Fixed an issue where the ext stylesheet was making the search box on the self sign log archives too small
re #243
time: 0h2m

--- a/webroot/css/admin.css
+++ b/webroot/css/admin.css
@@ -533,7 +533,7 @@ div.actions .ui-button-text {
 
 
 #search .ui-accordion-content{
-    height: 115px;
+    height: 145px;
     overflow: hidden;
 }
 
